nyjasta utgafan af buildanlegum koda, en runnar ekki

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = "is.fantastic7.tictactoe.TicTacToe"
+//sourceSets.main.java.srcDirs = ['src']
+mainClassName = 'is.fantastic7.tictactoe.TicTacToe'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -31,3 +32,8 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.11'
 }
+
+run {
+    standardInput = System.in
+}
+
