tilraun tvo med proc, system og build i gegnum green cloud fyrir heroku

--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,5 @@ mainClassName = "is.fantastic7.tictactoe.TicTacToe"
 run {
     standardInput = System.in
 }
-
-task stage { 
-	dependsOn installApp 
-}  
  
+task stage { dependsOn installApp }
