--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ jacocoTestReport {
     }
 }
 
+jacoco {
+    toolVersion = "0.7.1.201405082137"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+
 test {
     jacoco {
         append = false
