code coverage, build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ jacocoTestReport {
 
 jacoco {
     toolVersion = "0.7.1.201405082137"
-    reportsDir = file("$buildDir/customJacocoReportDir")
+    reportsDir = file("$buildDir/reports/jacoco”")
 }
 
 test {
